...
    },
    "session.finish_workout.action" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finish & Save"
          }
        },
        "es-MX" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Finalizar y guardar"
...
